# lsy969999.github.io

./: .gitbook.yaml  .gitignore  Cargo.toml  README (1).md  README.md  SUMMARY.md  SUMMARY.md​  build.sh  index.html  lsy969999_github_io.js  page-1.md
.github/workflows/: deploy.yml
_posts/: 2024-02-14-welcome-to-jekyll.markdown  2024-03-12-리눅스bash.md  2024-03-12-리눅스filesystem.md  2024-03-12-리눅스권한.md  2024-03-12-리눅스기본명령어.md  2024-03-13-리눅스daemon.md  2024-03-13-리눅스package.md  2024-03-18-cidr.md
assets/models/: character.glb  default_scene.glb  new_default_scene.glb
assets/ron/: haha.test.ron  some.custom.ron
assets/shaders/: animate_shader.wgsl  test_shhader.wgsl
dist2/: lsy969999_github_io.d.ts  lsy969999_github_io.js  lsy969999_github_io_bg.wasm.d.ts
js/: progressive_fetch.js
src/: lib.rs  main.rs
src/app/: component.rs  mod.rs  state.rs  system.rs
src/asset/: event.rs  mod.rs  resource.rs  state.rs  system.rs
src/asset/custom/: asset.rs  mod.rs
src/games/: default.rs  dungeon.rs  mod.rs  new_default.rs
src/inspector/: mod.rs
src/shader/: animated_shader.rs  mod.rs
src/ui/: component.rs  mod.rs  system.rs
src/ui/asset_loading/: mod.rs
src/ui/default_scene/: mod.rs
src/ui/dungeon_scene/: mod.rs
